--- a/app/views/static_pages/root.html.erb
+++ b/app/views/static_pages/root.html.erb
@@ -1,14 +1,12 @@
-<h1>OUR JOURNAL APP</h1>
-<div id="journal-app">
- 
+
+<div id="container">
+<header>Journal App</header>
+<div id="sidebar">asdf</div>
+
+<div id="journal-app"></div>
 
 
 </div>
-
-
-
-
-
 <script>
   // $(function() {
  //    posts = new JournalApp.Collections.Posts();
